account creation skeleton

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
-oauth.native: oauth.ml
-	ocamlbuild -use-ocamlfind -pkg opium.unix -pkg lwt -pkg unix -pkg yojson -pkg ppx_deriving_yojson oauth.native
+oauth.native: oauth.ml fuck_stdlib.ml
+	ocamlbuild -use-ocamlfind -pkgs extlib,opium.unix,lwt,unix,yojson,ppx_deriving_yojson oauth.native
 
 test: oauth.native
 	./oauth.native -p 8080 -d
