finish user accounts and authorization

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
 oauth.native: oauth.ml fuck_stdlib.ml
-	ocamlbuild -use-ocamlfind -pkgs extlib,opium.unix,lwt,unix,yojson,ppx_deriving_yojson,sqlexpr.ppx,cryptokit oauth.native
+	ocamlbuild -tag thread -use-ocamlfind -pkgs calendar,extlib,opium.unix,lwt,unix,yojson,ppx_deriving_yojson,sqlexpr.ppx,cryptokit,lwt.ppx oauth.native
 
 test: oauth.native
 	./oauth.native -p 8080 -d
