--- a/server/Makefile
+++ b/server/Makefile
@@ -2,7 +2,7 @@ oauth.native: oauth.ml fuck_stdlib.ml
 	ocamlbuild -tag thread -use-ocamlfind -pkgs calendar,extlib,opium.unix,lwt,unix,yojson,ppx_deriving_yojson,sqlexpr.ppx,cryptokit,lwt.ppx oauth.native
 
 test: oauth.native
-	./oauth.native -p 8080 -d
+	./oauth.native -p 8080 -d & lt --port 8080 -s plantpi
 
 clean:
 	ocamlbuild -clean
