add all source dependencies in the makefile

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
-oauth.native: oauth.ml fuck_stdlib.ml
+oauth.native: oauth.ml fuck_stdlib.ml device.ml user.ml db.ml session.ml
 	ocamlbuild -tag thread -use-ocamlfind -pkgs calendar,extlib,opium.unix,lwt,unix,yojson,ppx_deriving_yojson,sqlexpr.ppx,cryptokit,lwt.ppx oauth.native
 
 test: oauth.native
