--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,5 @@
 before_script:
- - add-apt-repository ppa:avsm/ppa
- - apt-get update
- - apt-get install ocaml ocaml-native-compilers camlp4-extra opam m4
+ - apt-get install opam ocaml ocaml-native-compilers camlp4-extra opam m4
 
 build:
   script: "make"
