make the CI script install m4 and opam

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
- - cat /etc/*-release
- - apt-get install opam ocaml ocaml-native-compilers camlp4-extra opam m4
+ - apk update
+ - apk add m4 opam
 
 build:
   script: "make"
