--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 before_script:
  - apk update
- - apk add make m4 ocaml perl build-base gcc zlib-dev
+ - apk add make m4 ocaml perl build-base gcc zlib-dev ca-certificates wget
+ - update-ca-certificates
  - wget https://raw.github.com/ocaml/opam/master/shell/opam_installer.sh -O - | sh -s /usr/local/bin
  - export OPAMYES=true
  - comp=${1:-system}
