--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
  - opam install camlp4
  - opam upgrade
  - ocaml -version
- - opam -version
+ - opam --version
  - camlp4 -version
  - opam install ocamlbuild cryptokit opium sqlexpr
 
