--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ before_script:
  - echo "@edge http://dl-cdn.alpinelinux.org/alpine/edge/community/" >> /etc/apk/repositories
  - cat /etc/apk/repositories
  - apk update
- - apk add make m4 ocaml perl build-base gcc zlib-dev ca-certificates wget opam@edge patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4=4.04-r0 git
+ - apk add make m4 ocaml perl build-base gcc zlib-dev ca-certificates wget opam@edge patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4=4.04-r0 git bash
  - update-ca-certificates
  - export OPAMYES=true
  - comp=${1:-system}
