rm unnecessary ca-certificates and wget system deps, add sqlexpr OPAM dependency, downgrade to OCaml 4.03

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,12 @@ before_script:
  - echo "@edge http://dl-cdn.alpinelinux.org/alpine/edge/community/" >> /etc/apk/repositories
  - cat /etc/apk/repositories
  - apk update
- - apk add make m4 ocaml perl build-base gcc zlib-dev ca-certificates wget opam@edge patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4=4.04-r0 git bash
+ - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash
  - update-ca-certificates
  - export OPAMYES=true
  - comp=${1:-system}
  - opam init --comp="${comp}"
+ - opam switch 4.03.0
  - eval `opam config env`
  - opam update
  - opam install camlp4
