--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ before_script:
  - ocaml -version
  - opam --version
  - camlp4 -version
- - opam install ocamlbuild cryptokit opium ppx_deriving_yojson sqlexpr
+ - opam install ocamlbuild cryptokit opium ppx_deriving_yojson sqlexpr extlib calendar
 
 build:
   script: "cd server && make"
