fix the CI and opam file to use the correct version of opium

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ before_script:
  - opam init --comp="${comp}"
  - opam switch 4.03.0
  - eval `opam config env`
+ - opam pin add opium https://github.com/chrismamo1/opium.git
  - opam update
  - opam install camlp4
  - opam upgrade
