added email.ml to makefile

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 build: PlantPi_server.native
 
-PlantPi_server.native: PlantPi_server.ml fuck_stdlib.ml device.ml user.ml db.ml session.ml
+PlantPi_server.native: PlantPi_server.ml fuck_stdlib.ml device.ml user.ml db.ml session.ml email.ml
 	ocamlbuild -tag thread -use-ocamlfind -pkgs calendar,extlib,opium.unix,lwt,unix,yojson,ppx_deriving_yojson,sqlexpr.ppx,cryptokit,lwt.ppx PlantPi_server.native
 
 test: PlantPi_server.native
