--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 before_script:
  - apk update
- - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash
+ - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash nodejs-npm
+ - npm install --save -g nightmare
+ - npm install --save -g mocha
  - export OPAMYES=true
  - comp=${1:-system}
  - opam init --comp="${comp}"
@@ -16,3 +18,6 @@ before_script:
 
 build:
   script: "cd server && opam pin add plantpi ."
+
+test:
+  script: "cd server && make check"
