--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 before_script:
+ - echo '@edge http://dl-4.alpinelinux.org/alpine/edge/main/' >> /etc/apk/repositories
  - apk update
- - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash nodejs-npm
+ - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash nodejs-npm@edge
  - npm install --save -g nightmare
  - npm install --save -g mocha
  - export OPAMYES=true
@@ -17,7 +18,4 @@ before_script:
  - camlp4 -version
 
 build:
-  script: "cd server && opam pin add plantpi ."
-
-test:
-  script: "cd server && make check"
+  script: "cd server && opam pin add plantpi . && make check"
