add edge repo so that we can install npm

--- a/server/Makefile
+++ b/server/Makefile
@@ -9,8 +9,7 @@ test: PlantPi_server.native
 
 check: PlantPi_server.native
 	./PlantPi_server.native -p 8080 -d &
-	cd tests
-	mocha .
+	cd tests && npm test
 	kill %1
 
 install: build
