--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,14 @@ before_script:
  - apk update
  - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash nodejs-npm@edge
  - npm install --save -g nightmare
+ - npm install --save nightmare
+ - npm install -g nightmare
  - npm install --save -g mocha
+ - npm install --save mocha
+ - npm install -g mocha
+ - npm install --save -g chai
+ - npm install --save chai
+ - npm install -g chai
  - export OPAMYES=true
  - comp=${1:-system}
  - opam init --comp="${comp}"
