add print debug to show the path in CI script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ before_script:
  - ocaml -version
  - opam --version
  - camlp4 -version
+ - echo $PATH
 
 build:
   script: "cd server && opam pin add plantpi . && make check"
