--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,28 +2,32 @@ before_script:
  - echo '@edge http://dl-4.alpinelinux.org/alpine/edge/main/' >> /etc/apk/repositories
  - apk update
  - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash nodejs-npm@edge
- - npm install --save -g nightmare
- - npm install --save nightmare
- - npm install -g nightmare
- - npm install --save -g mocha
- - npm install --save mocha
- - npm install -g mocha
- - npm install --save -g chai
- - npm install --save chai
- - npm install -g chai
- - export OPAMYES=true
- - comp=${1:-system}
- - opam init --comp="${comp}"
- - opam switch 4.03.0
- - eval `opam config env`
- - opam update
- - opam install camlp4
- - opam pin add opium https://github.com/chrismamo1/opium.git
- - eval `opam config env`
- - ocaml -version
- - opam --version
- - camlp4 -version
- - echo $PATH
+
+build_client:
+  script: "cd client && npm run build && npm run webpack"
 
 build:
+  before_script:
+   - npm install --save -g nightmare
+   - npm install --save nightmare
+   - npm install -g nightmare
+   - npm install --save -g mocha
+   - npm install --save mocha
+   - npm install -g mocha
+   - npm install --save -g chai
+   - npm install --save chai
+   - npm install -g chai
+   - export OPAMYES=true
+   - comp=${1:-system}
+   - opam init --comp="${comp}"
+   - opam switch 4.03.0
+   - eval `opam config env`
+   - opam update
+   - opam install camlp4
+   - opam pin add opium https://github.com/chrismamo1/opium.git
+   - eval `opam config env`
+   - ocaml -version
+   - opam --version
+   - camlp4 -version
+   - echo $PATH
   script: "cd server && opam pin add plantpi ."
