fix some minor CI script issues involving trying to cd into client when already there

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,5 +45,5 @@ lint_client:
   stage: lint
   script:
    - cd client && tidy index.html
-   - cd client/controlpanel && tidy *.html
-   - cd client && npm run lintjs
+   - cd controlpanel && tidy *.html
+   - cd .. && npm run lintjs
