--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,8 @@ lint_client:
   before_script:
    - apk add tidyhtml@edge
   stage: lint
+  dependencies:
+   - build_client
   script:
    - cd client && tidy index.html
    - cd controlpanel && tidy *.html
