fix up some linter issues in dashboard.html and limit the scope of things checked by tidy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,5 +47,5 @@ lint_client:
    - build_client
   script:
    - cd client && tidy index.html
-   - cd controlpanel && tidy *.html
+   - cd controlpanel && tidy dashboard.html
    - cd .. && npm run lintjs
