--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,15 +19,6 @@ build_server:
    - echo '@edge http://dl-4.alpinelinux.org/alpine/edge/main/' >> /etc/apk/repositories
    - apk update
    - apk add make m4 ocaml perl build-base gcc zlib-dev opam patch sqlite-dev glib-dev pkgconfig gmp-dev ncurses-dev camlp4 git bash nodejs-npm@edge
-   - npm install --save -g nightmare
-   - npm install --save nightmare
-   - npm install -g nightmare
-   - npm install --save -g mocha
-   - npm install --save mocha
-   - npm install -g mocha
-   - npm install --save -g chai
-   - npm install --save chai
-   - npm install -g chai
    - export OPAMYES=true
    - comp=${1:-system}
    - opam init --comp="${comp}"
@@ -38,6 +29,20 @@ build_server:
    - opam pin add opium https://github.com/chrismamo1/opium.git
    - eval `opam config env`
   script: "cd server && opam pin add plantpi ."
+
+test_client:
+  stage: test
+  before_script:
+   - npm install --save -g nightmare
+   - npm install --save nightmare
+   - npm install -g nightmare
+   - npm install --save -g mocha
+   - npm install --save mocha
+   - npm install -g mocha
+   - npm install --save -g chai
+   - npm install --save chai
+   - npm install -g chai
+  script: "echo not yet implemented"
 
 lint_client:
   before_script:
