hopefully fix the eslint invocation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,8 @@ lint_client:
    - apk add tidyhtml@edge
   stage: lint
   script:
+   - cd client && npm install --only=dev
    - cd client && tidy index.html
    - cd controlpanel && tidy dashboard.html
+   - pwd
    - cd .. && ./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/dashboard.js
