--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "webpack": "webpack",
     "dev": "npm run webpack-watch",
     "build": "babel controlpanel/js -d controlpanel/lib",
-    "lintjs": "./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/dashboard.js"
+    "lintjs": "./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/"
   },
   "devDependencies": {
     "axios": "^0.16.1",
