--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ lint_client:
   stage: lint
   script:
    - cd client && npm install --only=dev
-   - cd client && tidy index.html
-   - cd controlpanel && tidy dashboard.html
+   - tidy client/*.html
+   - tidy client/controlpanel/*.html
    - pwd
    - cd .. && ./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/dashboard.js
