--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ lint_client:
    - pwd
    - ls
    - tidy -help
-   - bash -c "tidy client/controlpanel/*.html"
+   - bash -c "tidy client/controlpanel/*.html > /dev/null"
    - pwd
    - cd client && npm install --only=dev
    - cd .. && ./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/dashboard.js
