--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,4 +54,4 @@ lint_client:
    - tidy -help
    - bash -c "tidy client/controlpanel/*.html > /dev/null"
    - pwd
-   - cd client && npm install --only=dev && ./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/dashboard.js
+   - cd client && npm install --only=dev && ./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/*.js
