--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
  - lint
  - build
  - test
+ - deploy
 
 build_client:
   stage: build
@@ -55,3 +56,12 @@ lint_client:
    - bash -c "tidy client/controlpanel/*.html > /dev/null"
    - pwd
    - cd client && npm install --only=dev && ./node_modules/.bin/eslint -c ./.eslintrc.json controlpanel/js/*.js
+
+deploy_server:
+  stage: deploy
+  only:
+   - master
+  script:
+   - apk add ruby
+   - gem install dpl
+   - dpl --provider=heroku --app=plantpi --api-key=$HEROKU_API_KEY
