shit for the stage, you

--- a/server/Makefile
+++ b/server/Makefile
@@ -4,7 +4,7 @@ PlantPi_server.native: PlantPi_server.ml fuck_stdlib.ml device.ml user.ml db.ml 
 	ocamlbuild -tag thread -use-ocamlfind -pkgs calendar,extlib,opium.unix,lwt,unix,yojson,ppx_deriving_yojson,sqlexpr.ppx,cryptokit,lwt.ppx,netstring,rresult PlantPi_server.native
 
 test: PlantPi_server.native
-	./PlantPi_server.native -p 8080 -d & lt --port 8080 -s plantpi
+	./PlantPi_server.native -p 8080 -d
 
 
 check: PlantPi_server.native
