--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^3.4.0",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
+    "rd3": "^0.7.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "webpack": "^2.3.3"
@@ -28,5 +29,9 @@
       "transform-react-jsx",
       "babel-plugin-transform-es2015-modules-amd"
     ]
+  },
+  "dependencies": {
+    "chart.js": "^2.5.0",
+    "react-chartjs": "^0.8.0"
   }
 }
